--- a/WeatherAppIOS/Base.lproj/Main.storyboard
+++ b/WeatherAppIOS/Base.lproj/Main.storyboard
@@ -3,9 +3,11 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -179,17 +181,77 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eo5-2S-i0d" userLabel="ShadowOne">
-                                <rect key="frame" x="0.0" y="589" width="414" height="307"/>
-                                <color key="backgroundColor" white="1" alpha="0.69856312732822845" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j1O-9z-SfM" userLabel="ShadowThree">
+                                <rect key="frame" x="0.0" y="575" width="414" height="287"/>
+                                <color key="backgroundColor" white="1" alpha="0.30302378673427155" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IWS-Dw-rs5" userLabel="ShadowTwo">
                                 <rect key="frame" x="0.0" y="582" width="414" height="314"/>
                                 <color key="backgroundColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eo5-2S-i0d" userLabel="ShadowOne">
+                                <rect key="frame" x="0.0" y="589" width="414" height="307"/>
+                                <color key="backgroundColor" white="1" alpha="0.69856312732822845" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NNX-cx-ze8">
                                 <rect key="frame" x="0.0" y="596" width="414" height="300"/>
                                 <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GeN-fW-mv1">
+                                        <rect key="frame" x="32" y="69" width="350" height="181"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Vn1-c9-cRo">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="weatherCell" id="XJj-Te-E4E" customClass="WeatherCollectionViewCell" customModule="WeatherAppIOS" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="123.5" height="128"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="mC1-s2-b9F">
+                                                    <rect key="frame" x="0.0" y="0.0" width="123.5" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="apT-Hs-3O3">
+                                                            <rect key="frame" x="20" y="25.5" width="84.5" height="26"/>
+                                                            <color key="tintColor" name="PrimaryColor"/>
+                                                            <imageReference key="image" image="cloud.sun" catalog="system" symbolScale="large"/>
+                                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OkS-1R-feu">
+                                                            <rect key="frame" x="44" y="59" width="35.5" height="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6I-74-Jsa">
+                                                            <rect key="frame" x="44" y="81" width="35.5" height="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="j6I-74-Jsa" secondAttribute="trailing" constant="44" id="E0S-hD-LCy"/>
+                                                        <constraint firstItem="apT-Hs-3O3" firstAttribute="top" secondItem="mC1-s2-b9F" secondAttribute="top" constant="30" id="MQg-iK-yQO"/>
+                                                        <constraint firstAttribute="trailing" secondItem="OkS-1R-feu" secondAttribute="trailing" constant="44" id="RTm-mL-j6p"/>
+                                                        <constraint firstItem="OkS-1R-feu" firstAttribute="leading" secondItem="mC1-s2-b9F" secondAttribute="leading" constant="44" id="RpR-Nb-YUU"/>
+                                                        <constraint firstAttribute="bottom" secondItem="j6I-74-Jsa" secondAttribute="bottom" constant="30" id="S5S-tV-UfK"/>
+                                                        <constraint firstItem="OkS-1R-feu" firstAttribute="top" secondItem="apT-Hs-3O3" secondAttribute="bottom" constant="9" id="dsp-4a-xP5"/>
+                                                        <constraint firstAttribute="trailing" secondItem="apT-Hs-3O3" secondAttribute="trailing" constant="20" id="jXc-bx-nEc"/>
+                                                        <constraint firstItem="j6I-74-Jsa" firstAttribute="leading" secondItem="mC1-s2-b9F" secondAttribute="leading" constant="44" id="m4J-iv-P9x"/>
+                                                        <constraint firstItem="apT-Hs-3O3" firstAttribute="leading" secondItem="mC1-s2-b9F" secondAttribute="leading" constant="20" id="wNR-Oy-a0C"/>
+                                                    </constraints>
+                                                </collectionViewCellContentView>
+                                                <connections>
+                                                    <outlet property="weatherDay" destination="OkS-1R-feu" id="cHF-s3-K8v"/>
+                                                    <outlet property="weatherImage" destination="apT-Hs-3O3" id="SX7-vu-QEC"/>
+                                                    <outlet property="weatherTemp" destination="j6I-74-Jsa" id="tw9-gg-Qqu"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Today" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWM-Ik-9Ji">
                                         <rect key="frame" x="32" y="20" width="350" height="29"/>
                                         <fontDescription key="fontDescription" name="AdventPro-Medium" family="Advent Pro" pointSize="24"/>
@@ -200,13 +262,13 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="rWM-Ik-9Ji" secondAttribute="trailing" constant="32" id="P8e-47-QH3"/>
+                                    <constraint firstAttribute="bottom" secondItem="GeN-fW-mv1" secondAttribute="bottom" constant="50" id="UQb-e9-0Lj"/>
                                     <constraint firstItem="rWM-Ik-9Ji" firstAttribute="leading" secondItem="NNX-cx-ze8" secondAttribute="leading" constant="32" id="gSY-lP-FaY"/>
+                                    <constraint firstItem="GeN-fW-mv1" firstAttribute="top" secondItem="rWM-Ik-9Ji" secondAttribute="bottom" constant="20" id="gpo-NX-992"/>
+                                    <constraint firstAttribute="trailing" secondItem="GeN-fW-mv1" secondAttribute="trailing" constant="32" id="h3w-69-JcI"/>
+                                    <constraint firstItem="GeN-fW-mv1" firstAttribute="leading" secondItem="NNX-cx-ze8" secondAttribute="leading" constant="32" id="m8T-vf-yrv"/>
                                     <constraint firstItem="rWM-Ik-9Ji" firstAttribute="top" secondItem="NNX-cx-ze8" secondAttribute="top" constant="20" id="vgt-GY-emi"/>
                                 </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j1O-9z-SfM" userLabel="ShadowThree">
-                                <rect key="frame" x="0.0" y="575" width="414" height="287"/>
-                                <color key="backgroundColor" white="1" alpha="0.30302378673427155" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="seC-3N-PUh">
                                 <rect key="frame" x="264.5" y="344" width="117.5" height="48"/>
@@ -322,6 +384,7 @@
         <image name="Daytime" width="188" height="376"/>
         <image name="Pin" width="16" height="16"/>
         <image name="cloud.drizzle" catalog="system" width="125" height="128"/>
+        <image name="cloud.sun" catalog="system" width="128" height="95"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="sunrise.fill" catalog="system" width="128" height="97"/>
         <image name="umbrella.fill" catalog="system" width="122" height="128"/>
