--- a/WeatherAppIOS/Base.lproj/Main.storyboard
+++ b/WeatherAppIOS/Base.lproj/Main.storyboard
@@ -207,40 +207,40 @@
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="weatherCell" id="XJj-Te-E4E" customClass="WeatherCollectionViewCell" customModule="WeatherAppIOS" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="123.5" height="128"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="71" height="128"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="mC1-s2-b9F">
-                                                    <rect key="frame" x="0.0" y="0.0" width="123.5" height="128"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="71" height="128"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="apT-Hs-3O3">
-                                                            <rect key="frame" x="20" y="25.5" width="84.5" height="26"/>
+                                                            <rect key="frame" x="20" y="25.5" width="32" height="26"/>
                                                             <color key="tintColor" name="PrimaryColor"/>
                                                             <imageReference key="image" image="cloud.sun" catalog="system" symbolScale="large"/>
                                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OkS-1R-feu">
-                                                            <rect key="frame" x="44" y="59" width="35.5" height="17"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OkS-1R-feu">
+                                                            <rect key="frame" x="20" y="59" width="31" height="0.0"/>
+                                                            <fontDescription key="fontDescription" name="AdventPro-Regular" family="Advent Pro" pointSize="16"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6I-74-Jsa">
-                                                            <rect key="frame" x="44" y="81" width="35.5" height="17"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6I-74-Jsa">
+                                                            <rect key="frame" x="30" y="69" width="11" height="0.0"/>
+                                                            <fontDescription key="fontDescription" name="AdventPro-Regular" family="Advent Pro" pointSize="16"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="j6I-74-Jsa" secondAttribute="trailing" constant="44" id="E0S-hD-LCy"/>
+                                                        <constraint firstAttribute="trailing" secondItem="j6I-74-Jsa" secondAttribute="trailing" constant="30" id="E0S-hD-LCy"/>
+                                                        <constraint firstItem="j6I-74-Jsa" firstAttribute="top" secondItem="OkS-1R-feu" secondAttribute="bottom" constant="10" id="Ivf-re-ROP"/>
                                                         <constraint firstItem="apT-Hs-3O3" firstAttribute="top" secondItem="mC1-s2-b9F" secondAttribute="top" constant="30" id="MQg-iK-yQO"/>
-                                                        <constraint firstAttribute="trailing" secondItem="OkS-1R-feu" secondAttribute="trailing" constant="44" id="RTm-mL-j6p"/>
-                                                        <constraint firstItem="OkS-1R-feu" firstAttribute="leading" secondItem="mC1-s2-b9F" secondAttribute="leading" constant="44" id="RpR-Nb-YUU"/>
-                                                        <constraint firstAttribute="bottom" secondItem="j6I-74-Jsa" secondAttribute="bottom" constant="30" id="S5S-tV-UfK"/>
+                                                        <constraint firstAttribute="trailing" secondItem="OkS-1R-feu" secondAttribute="trailing" constant="20" id="RTm-mL-j6p"/>
+                                                        <constraint firstItem="OkS-1R-feu" firstAttribute="leading" secondItem="mC1-s2-b9F" secondAttribute="leading" constant="20" id="RpR-Nb-YUU"/>
                                                         <constraint firstItem="OkS-1R-feu" firstAttribute="top" secondItem="apT-Hs-3O3" secondAttribute="bottom" constant="9" id="dsp-4a-xP5"/>
                                                         <constraint firstAttribute="trailing" secondItem="apT-Hs-3O3" secondAttribute="trailing" constant="20" id="jXc-bx-nEc"/>
-                                                        <constraint firstItem="j6I-74-Jsa" firstAttribute="leading" secondItem="mC1-s2-b9F" secondAttribute="leading" constant="44" id="m4J-iv-P9x"/>
+                                                        <constraint firstItem="j6I-74-Jsa" firstAttribute="leading" secondItem="mC1-s2-b9F" secondAttribute="leading" constant="30" id="m4J-iv-P9x"/>
                                                         <constraint firstItem="apT-Hs-3O3" firstAttribute="leading" secondItem="mC1-s2-b9F" secondAttribute="leading" constant="20" id="wNR-Oy-a0C"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
@@ -252,7 +252,7 @@
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Today" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWM-Ik-9Ji">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Forecast" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWM-Ik-9Ji">
                                         <rect key="frame" x="32" y="20" width="350" height="29"/>
                                         <fontDescription key="fontDescription" name="AdventPro-Medium" family="Advent Pro" pointSize="24"/>
                                         <color key="textColor" name="PrimaryColor"/>
